--- a/css/demo.css
+++ b/css/demo.css
@@ -71,7 +71,7 @@ section {
 .codrops-header h1 span {
 	display: block;
 	padding: 25px 0 0.6em 0.1em;
-	color: #fff;
+	color: #2f3238;
 	font-weight: 300;
 	font-size: 45%;
 }
